trying to reconstruct

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -29,25 +29,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distros = ['mix', 'gau_1', 'gau_2', 'exp']\n",
-    "stepsizes = ['const', '2_div_sqrt_k', '0.002_div_sqrt_k']\n",
-    "\n",
-    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
-    "N_g = 12 # N_generation\n",
-    "N_s = 10 # N_shuffle\n",
-    "\n",
-    "# N_q = len(tau_vals)\n",
-    "\n",
-    "# c_Norm = colors.Normalize(vmin=0, vmax=1)\n",
-    "# scalarMap = cmx.ScalarMappable(norm=c_Norm, cmap=plt.get_cmap('cool'))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
@@ -73,27 +54,7 @@
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def get_settings(distro_lst, datasize_lst, stepsize_lst):\n",
-    "    len_lst = [len(distro_lst), len(datasize_lst), len(stepsize_lst)]\n",
-    "    if len_lst.count(1) != len(len_lst)-1: \n",
-    "#         if len_lst.count(1) == len(len_lst):\n",
-    "            \n",
-    "        raise Exception(\"Setting inputs are wrong!\")\n",
-    "    \n",
-    "    N_settings = max((len_lst))\n",
-    "    setting_lst = []\n",
-    "    for lst in [distro_lst, datasize_lst, stepsize_lst]:\n",
-    "        if len(lst)==1: \n",
-    "            lst = lst*N_settings\n",
-    "        setting_lst.append(lst)\n",
-    "        \n",
-    "    changed_setting = None\n",
-    "    change_lst = ['distro', 'data_size', 'step_size']\n",
-    "    for idx, l in enumerate(len_lst):\n",
-    "        if l>1: changed_setting = change_lst[idx]\n",
-    "    return np.asarray(setting_lst).T, changed_setting\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -281,17 +242,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_file_name(changed_setting, distro, datasize, stepsize, s_test):\n",
     "#     print(changed_setting)\n",
     "    if s_test:\n",
-    "        return ('Shuffle', True)\n",
+    "        return ('Shuffle', 'shuffle')\n",
     "    setting_dict = {\n",
     "        'distro': ('Distribution', distro),\n",
-    "        'data_size': ('Distribution', distro),\n",
+    "        'data_size': ('Data size', datasize),\n",
     "        'step_size': ('Step size', stepsize),\n",
     "    }\n",
     "    if not setting_dict.get(changed_setting): \n",
@@ -301,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -319,10 +280,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def get_settings(distro_lst, datasize_lst, stepsize_lst):\n",
+    "    len_lst = [len(distro_lst), len(datasize_lst), len(stepsize_lst)]\n",
+    "    if len_lst.count(1) != len(len_lst)-1: \n",
+    "#         if len_lst.count(1) == len(len_lst):\n",
+    "            \n",
+    "        raise Exception(\"Setting inputs are wrong!\")\n",
+    "    \n",
+    "    N_settings = max((len_lst))\n",
+    "    setting_lst = []\n",
+    "    for lst in [distro_lst, datasize_lst, stepsize_lst]:\n",
+    "        if len(lst)==1: \n",
+    "            lst = lst*N_settings\n",
+    "        setting_lst.append(lst)\n",
+    "        \n",
+    "    changed_setting = None\n",
+    "    change_lst = ['distro', 'data_size', 'step_size']\n",
+    "    for idx, l in enumerate(len_lst):\n",
+    "        if l>1: changed_setting = change_lst[idx]\n",
+    "    return np.asarray(setting_lst).T, changed_setting\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
+    "\n",
+    "\n",
     "def quantile_sgd_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, \n",
     "                         g_test=False, s_test=False, tau_lst=tau_vals, \n",
     "                        ):\n",
@@ -367,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,27 +390,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "distros = ['mix', 'gau_1', 'gau_2', 'exp']\n",
+    "stepsizes = ['const', '2_div_sqrt_k', '0.002_div_sqrt_k']\n",
+    "\n",
+    "N_g = 12 # N_generation\n",
+    "N_s = 10 # N_shuffle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "distro\n",
+      "False\n",
+      "[['mix' '1000' 'const']\n",
+      " ['gau_1' '1000' 'const']\n",
+      " ['gau_2' '1000' 'const']\n",
+      " ['exp' '1000' 'const']]\n",
+      "Experiment_results/SGD/distro/mix_q_true.txt\n",
+      "Experiment_results/SGD/distro/mix_q_batches.txt\n",
+      "Experiment_results/SGD/distro/mix_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/mix_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/mix_E.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_true.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_batches.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/gau_1_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/gau_1_E.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_true.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_batches.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/gau_2_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/gau_2_E.txt\n",
+      "Experiment_results/SGD/distro/exp_q_true.txt\n",
+      "Experiment_results/SGD/distro/exp_q_batches.txt\n",
+      "Experiment_results/SGD/distro/exp_q_est_res.txt\n",
+      "Experiment_results/SGD/distro/exp_q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/exp_E.txt\n",
+      "data_size\n",
+      "False\n",
+      "[['gau_2' '100' 'const']\n",
+      " ['gau_2' '1000' 'const']\n",
+      " ['gau_2' '10000' 'const']]\n",
+      "Experiment_results/SGD/data_size/100_q_true.txt\n",
+      "Experiment_results/SGD/data_size/100_q_batches.txt\n",
+      "Experiment_results/SGD/data_size/100_q_est_res.txt\n",
+      "Experiment_results/SGD/data_size/100_q_est_proc.txt\n",
+      "Experiment_results/SGD/data_size/100_E.txt\n",
+      "Experiment_results/SGD/data_size/1000_q_true.txt\n",
+      "Experiment_results/SGD/data_size/1000_q_batches.txt\n",
+      "Experiment_results/SGD/data_size/1000_q_est_res.txt\n",
+      "Experiment_results/SGD/data_size/1000_q_est_proc.txt\n",
+      "Experiment_results/SGD/data_size/1000_E.txt\n",
+      "Experiment_results/SGD/data_size/10000_q_true.txt\n",
+      "Experiment_results/SGD/data_size/10000_q_batches.txt\n",
+      "Experiment_results/SGD/data_size/10000_q_est_res.txt\n",
+      "Experiment_results/SGD/data_size/10000_q_est_proc.txt\n",
+      "Experiment_results/SGD/data_size/10000_E.txt\n",
+      "step_size\n",
+      "False\n",
+      "[['gau_1' '1000' 'const']\n",
+      " ['gau_1' '1000' '2_div_sqrt_k']\n",
+      " ['gau_1' '1000' '0.002_div_sqrt_k']]\n",
+      "Experiment_results/SGD/step_size/const_q_true.txt\n",
+      "Experiment_results/SGD/step_size/const_q_batches.txt\n",
+      "Experiment_results/SGD/step_size/const_q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/const_q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/const_E.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_true.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_batches.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_E.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_true.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_batches.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_E.txt\n",
       "data_sequence\n",
       "True\n",
       "[['gau_1' '1000' 'const']\n",
       " ['gau_1' '1000' 'const']]\n",
-      "Experiment_results/SGD/data_sequence/True_q_true.txt\n",
-      "Experiment_results/SGD/data_sequence/True_q_batches.txt\n",
-      "Experiment_results/SGD/data_sequence/True_q_est_res.txt\n",
-      "Experiment_results/SGD/data_sequence/True_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_sequence/True_E.txt\n",
-      "Experiment_results/SGD/data_sequence/True_q_true.txt\n",
-      "Experiment_results/SGD/data_sequence/True_q_batches.txt\n",
-      "Experiment_results/SGD/data_sequence/True_q_est_res.txt\n",
-      "Experiment_results/SGD/data_sequence/True_q_est_proc.txt\n",
-      "Experiment_results/SGD/data_sequence/True_E.txt\n"
+      "Experiment_results/SGD/data_sequence/shuffle_q_true.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_q_batches.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_q_est_res.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_q_est_proc.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_E.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_q_true.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_q_batches.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_q_est_res.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_q_est_proc.txt\n",
+      "Experiment_results/SGD/data_sequence/shuffle_E.txt\n"
      ]
     }
    ],
@@ -427,12 +497,12 @@
     "# Run all functions\n",
     "\n",
     "main_folder = 'SGD'\n",
-    "all_sgd_comparisons(['data_sequence'], main_folder)"
+    "all_sgd_comparisons(sgd_lst, main_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,21 +553,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Experiment_results/SGD/data_sequence/True_\n"
+      "Experiment_results/SGD/step_size/stepsize_\n",
+      "Experiment_results/SGD/step_size/const_\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k_\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_\n",
+      "Experiment_results/SGD/distro/gau_1_\n",
+      "Experiment_results/SGD/distro/mix_\n",
+      "Experiment_results/SGD/distro/gau_2_\n",
+      "Experiment_results/SGD/distro/distro_\n",
+      "Experiment_results/SGD/distro/exp_\n",
+      "Experiment_results/SGD/data_size/100_\n",
+      "Experiment_results/SGD/data_size/2000_\n",
+      "Experiment_results/SGD/data_size/datasize_\n",
+      "Experiment_results/SGD/data_size/gau_2_\n",
+      "Experiment_results/SGD/data_size/10000_\n",
+      "Experiment_results/SGD/data_size/1000_\n",
+      "Experiment_results/SGD/data_size/100000_\n",
+      "Experiment_results/SGD/data_sequence/shuffle_\n"
      ]
     }
    ],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
-    "plot_charts(\"Experiment_results/SGD/data_sequence\")"
+    "plot_charts(\"Experiment_results/SGD/\")"
    ]
   },
   {
