--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -13,14 +13,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %matplotlib inline\n",
-    "\n",
-    "# import io, os, sys, types\n",
-    "# from IPython import get_ipython\n",
-    "# from nbformat import read\n",
-    "# from IPython.core.interactiveshell import InteractiveShell\n",
-    "\n",
-    "\n",
     "import math\n",
     "import numpy as np\n",
     "import os\n",
@@ -29,36 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check if folder exists, if not, then create new empty folders\n",
-    "def initialize_folders(fd_lst = ['Frugal_SGD', 'SGD'], main_fd = 'Experiment_results/'):\n",
-    "    \n",
-    "    for fd in fd_lst:\n",
-    "        if not os.path.exists(main_fd+fd):\n",
-    "            os.makedirs(main_fd+fd)\n",
-    "\n",
-    "    sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
-    "    for fd in sgd_lst:\n",
-    "        fd_name = main_fd+'SGD/'+fd\n",
-    "        if not os.path.exists(fd_name):\n",
-    "            os.makedirs(fd_name)\n",
-    "\n",
-    "initialize_folders()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -280,15 +250,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_settings(distro_lst, datasize_lst, stepsize_lst):\n",
     "    len_lst = [len(distro_lst), len(datasize_lst), len(stepsize_lst)]\n",
-    "    if len_lst.count(1) != len(len_lst)-1: \n",
-    "#         if len_lst.count(1) == len(len_lst):\n",
-    "            \n",
+    "    if len_lst.count(1) != len(len_lst)-1:             \n",
     "        raise Exception(\"Setting inputs are wrong!\")\n",
     "    \n",
     "    N_settings = max((len_lst))\n",
@@ -307,15 +275,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
-    "\n",
-    "\n",
-    "def quantile_sgd_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, \n",
-    "                         g_test=False, s_test=False, tau_lst=tau_vals, \n",
+    "def quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, \n",
+    "                         g_test=False, s_test=False, tau_lst=[0.1, 0.3, 0.5, 0.9, 0.99], \n",
     "                        ):\n",
     "    \n",
     "    if g_test and s_test: raise Exception(\"g_test and s_test can't both be true\")\n",
@@ -358,13 +323,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
+    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
     "\n",
-    "def all_sgd_comparisons(sgd_lst, root_folder='SGD'):\n",
+    "def all_method_comparisons(sgd_lst, root_folder='SGD'):\n",
     "    \n",
     "    args_dict = {\n",
     "        'distro': (distros, [1000], ['const'], True),\n",
@@ -384,13 +350,13 @@
     "        tau_lst = tau_vals\n",
     "        print (s_test)\n",
     "        \n",
-    "        quantile_sgd_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, g_test, s_test, tau_lst)\n",
+    "        quantile_method_compare(folder_name, distro_lst, datasize_lst, stepsize_lst, g_test, s_test, tau_lst)\n",
     "            "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +369,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check if folder exists, if not, then create new empty folders\n",
+    "def initialize_folders(fd_lst = ['Frugal_SGD', 'SGD'], main_fd = 'Experiment_results/'):\n",
+    "    \n",
+    "    for fd in fd_lst:\n",
+    "        if not os.path.exists(main_fd+fd):\n",
+    "            os.makedirs(main_fd+fd)\n",
+    "\n",
+    "    sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
+    "    for fd in sgd_lst:\n",
+    "        fd_name = main_fd+'SGD/'+fd\n",
+    "        if not os.path.exists(fd_name):\n",
+    "            os.makedirs(fd_name)\n",
+    "\n",
+    "initialize_folders()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -497,12 +485,12 @@
     "# Run all functions\n",
     "\n",
     "main_folder = 'SGD'\n",
-    "all_sgd_comparisons(sgd_lst, main_folder)"
+    "all_method_comparisons(sgd_lst, main_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -588,9 +576,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0., 0., 0., 0., 0., 0.],\n",
+       "       [0., 0., 0., 0., 0., 0.]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "a = np.zeros((3,4))\n",
