--- a/QuantEst/sgd_est_experiment/Multi.ipynb
+++ b/QuantEst/sgd_est_experiment/Multi.ipynb
@@ -10,7 +10,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "%matplotlib inline\n",
-    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n"
+    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]"
    ]
   },
   {
