Output_data_generation done

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -9,39 +9,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "import numpy as np\n",
     "import os\n",
-    "from Distro_generation import get_dataset, get_q_batches, get_q_true"
+    "from Dataset_generation import get_dataset, get_q_batches, get_q_true, get_shuffled_dataset\n",
+    "from Output_data_generation import initialize_folders, get_settings, get_file_name, save_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def set_stepsize(k, stepsize, length):\n",
-    "#     if stepsize=='const':\n",
-    "#         return 1 * np.ones(length)\n",
-    "#     elif stepsize=='2_div_sqrt_k':\n",
-    "#         return 2/math.sqrt(k)* np.ones(length)\n",
-    "#     elif stepsize=='0.002_div_sqrt_k':\n",
-    "#         return 0.002/math.sqrt(k) * np.ones(length)\n",
-    "#     raise Exception('stepsize parameter is wrong')\n",
-    "    \n",
-    "    \n",
+    "sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
+    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def set_stepsize(k, stepsize):\n",
     "    if stepsize=='const':\n",
     "        return 1\n",
@@ -54,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,29 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dataset = get_dataset('gau_1', 1000, g_test=True) * 50 - 200\n",
-    "# print(dataset.shape)\n",
-    "\n",
-    "# # proc1 = get_procs(dataset, 'const', tau_vals)\n",
-    "# ## res1 = get_res(proc1)\n",
-    "# # proc2 = get_procs(dataset, 'frugal', tau_vals)\n",
-    "# # plt.plot(proc1.T)ad\n",
-    "# # plt.plot(proc2.T)\n",
-    "# # plt.show()\n",
-    "\n",
-    "\n",
-    "# res, proc = get_q_ests(dataset, 'const', tau_vals)\n",
-    "# print(res)\n",
-    "# print(proc)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,110 +139,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def write_data(data, filename, setting=None):\n",
-    "    with open(filename, 'w') as outfile:\n",
-    "        if setting is not None: outfile.write('# Setting: {0}\\n'.format(setting))\n",
-    "        if len(data.shape) == 1: data = data.reshape(-1, 1)\n",
-    "        outfile.write('# Array shape: {0}\\n \\n'.format(data.shape))\n",
-    "\n",
-    "        for data_slice in data:\n",
-    "            np.savetxt(outfile, data_slice, fmt='%-15.8g')\n",
-    "            outfile.write('\\n')\n",
-    "\n",
-    "\n",
-    "def write_data_overview(category, setting, tau_lst, file_name):\n",
-    "    with open(file_name, 'w') as f:\n",
-    "        f.write(\"Tested on \"+category+\": \"+str(setting)+\"\\n\") \n",
-    "        f.write(str(tau_lst))\n",
-    "    \n",
-    "# write_data_overview('ca', 'se', tau_vals, \"try.txt\")\n",
-    "    \n",
-    "def save_data(foldername, file_name, tau_lst, data_dict):\n",
-    "    category, setting = file_name[0], file_name[1]    \n",
-    "    write_data_overview(category, setting, tau_lst, foldername+str(setting)+\"_\"+\"overview.txt\")\n",
-    "\n",
-    "    for data_name in data_dict:\n",
-    "        print (foldername+str(setting)+\"_\"+data_name+'.txt')\n",
-    "        write_data(data_dict[data_name], foldername+str(setting)+\"_\"+data_name+'.txt')\n",
-    "        \n",
-    "    return\n",
-    "\n",
-    "# save_data('', ('C', 'S'), tau_vals, {'dataset': np.reshape(np.random.uniform(0, 4, 100), (2, 5, 10))})"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Main functions "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_file_name(changed_setting, distro, datasize, stepsize, s_test):\n",
-    "#     print(changed_setting)\n",
-    "    if s_test:\n",
-    "        return ('Shuffle', 'shuffle')\n",
-    "    setting_dict = {\n",
-    "        'distro': ('Distribution', distro),\n",
-    "        'data_size': ('Data size', datasize),\n",
-    "        'step_size': ('Step size', stepsize),\n",
-    "    }\n",
-    "    if not setting_dict.get(changed_setting): \n",
-    "        raise Exception ('Cannot get file name')\n",
-    "    return setting_dict.get(changed_setting)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_shuffled_dataset(dataset, datasize, s_test):\n",
-    "    if not s_test: return dataset\n",
-    "    \n",
-    "    shuffled_dt = np.zeros((N_s, datasize))\n",
-    "    for i in range(N_s):\n",
-    "        np.random.shuffle(dataset)\n",
-    "        shuffled_dt[i] = dataset\n",
-    "    dataset = shuffled_dt\n",
-    "            \n",
-    "    return dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_settings(distro_lst, datasize_lst, stepsize_lst):\n",
-    "    len_lst = [len(distro_lst), len(datasize_lst), len(stepsize_lst)]\n",
-    "    if len_lst.count(1) != len(len_lst)-1:             \n",
-    "        raise Exception(\"Setting inputs are wrong!\")\n",
-    "    \n",
-    "    N_settings = max((len_lst))\n",
-    "    setting_lst = []\n",
-    "    for lst in [distro_lst, datasize_lst, stepsize_lst]:\n",
-    "        if len(lst)==1: \n",
-    "            lst = lst*N_settings\n",
-    "        setting_lst.append(lst)\n",
-    "        \n",
-    "    changed_setting = None\n",
-    "    change_lst = ['distro', 'data_size', 'step_size']\n",
-    "    for idx, l in enumerate(len_lst):\n",
-    "        if l>1: changed_setting = change_lst[idx]\n",
-    "    return np.asarray(setting_lst).T, changed_setting\n"
    ]
   },
   {
@@ -327,9 +199,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
-    "tau_vals = [0.1, 0.3, 0.5, 0.9, 0.99]\n",
-    "\n",
     "def all_method_comparisons(sgd_lst, root_folder='SGD'):\n",
     "    \n",
     "    args_dict = {\n",
@@ -374,17 +243,18 @@
    "outputs": [],
    "source": [
     "# Check if folder exists, if not, then create new empty folders\n",
-    "def initialize_folders(fd_lst = ['Frugal_SGD', 'SGD'], main_fd = 'Experiment_results/'):\n",
+    "def initialize_folders(main_fd = 'Experiment_results/', fd_lst = ['Frugal_SGD', 'SGD'], \n",
+    "                       sub_fd_lst = ['SGD/'], subsub_fd_lst = sgd_lst):\n",
     "    \n",
     "    for fd in fd_lst:\n",
     "        if not os.path.exists(main_fd+fd):\n",
     "            os.makedirs(main_fd+fd)\n",
     "\n",
-    "    sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequence']        \n",
-    "    for fd in sgd_lst:\n",
-    "        fd_name = main_fd+'SGD/'+fd\n",
-    "        if not os.path.exists(fd_name):\n",
-    "            os.makedirs(fd_name)\n",
+    "    for ss_fd in subsub_fd_lst:\n",
+    "        for s_fd in sub_fd_lst:\n",
+    "            fd_name = main_fd+s_fd+ss_fd\n",
+    "            if not os.path.exists(fd_name):\n",
+    "                os.makedirs(fd_name)\n",
     "\n",
     "initialize_folders()"
    ]
@@ -485,12 +355,15 @@
     "# Run all functions\n",
     "\n",
     "main_folder = 'SGD'\n",
+    "\n",
+    "initialize_folders(main_fd = 'Experiment_results/', fd_lst = ['Frugal_SGD', 'SGD'], \n",
+    "                       sub_fd_lst = ['SGD/'], subsub_fd_lst = sgd_lst)\n",
     "all_method_comparisons(sgd_lst, main_folder)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -541,61 +414,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Experiment_results/SGD/step_size/stepsize_\n",
-      "Experiment_results/SGD/step_size/const_\n",
-      "Experiment_results/SGD/step_size/2_div_sqrt_k_\n",
-      "Experiment_results/SGD/step_size/0.002_div_sqrt_k_\n",
-      "Experiment_results/SGD/distro/gau_1_\n",
-      "Experiment_results/SGD/distro/mix_\n",
-      "Experiment_results/SGD/distro/gau_2_\n",
-      "Experiment_results/SGD/distro/distro_\n",
-      "Experiment_results/SGD/distro/exp_\n",
-      "Experiment_results/SGD/data_size/100_\n",
-      "Experiment_results/SGD/data_size/2000_\n",
-      "Experiment_results/SGD/data_size/datasize_\n",
-      "Experiment_results/SGD/data_size/gau_2_\n",
-      "Experiment_results/SGD/data_size/10000_\n",
-      "Experiment_results/SGD/data_size/1000_\n",
-      "Experiment_results/SGD/data_size/100000_\n",
-      "Experiment_results/SGD/data_sequence/shuffle_\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from Plot import plot_charts\n",
     "\n",
     "plot_charts(\"Experiment_results/SGD/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0., 0., 0., 0., 0.],\n",
-       "       [0., 0., 0., 0., 0., 0.]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import numpy as np\n",
-    "a = np.zeros((3,4))\n",
-    "a = a.reshape((2,-1))\n",
-    "a"
    ]
   },
   {
